src/components/tag/tag.styles.scss
.tag {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 18px;
	padding: 0 $grid-base;
	color: var(--m3-on-primary, $secondary);
	font-size: 12px;
	border-radius: 8px;
	word-break: keep-all;
	letter-spacing: 0.25px;

	&--yellow {
		background-color: $yellow-3;
	}

	&--green {
		background-color: $success;
		color: white;
	}

	&--red {
		background-color: #ff0000;
		color: white;
	}

	&--clickable {
		transition: background-color 0.5s ease-out;

		&.tag--yellow:hover {
			background-color: $yellow-4;
		}
	}
}

